--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="red">#ff0000</color>
+    <color name="green">#32CD32</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="white">#bfffffff</color>
 </resources>
