--- a/app/src/main/res/layout-land/activity_settings.xml
+++ b/app/src/main/res/layout-land/activity_settings.xml
@@ -10,8 +10,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@android:color/black"
-        android:id="@+id/cameraView"
+        app:srcCompat="@color/black"
+        android:id="@+id/cameraViewSettings"
         android:translationZ="1dp"
         android:scaleType="centerCrop"
         android:layout_alignParentTop="true"
@@ -153,7 +153,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/transparentWhite"
         android:id="@+id/menuSettingsBackgroundView"
         android:translationZ="2dp"
         android:layout_alignParentTop="true"
