--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -77,6 +77,24 @@
         android:scaleType="fitCenter" />
 
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:id="@+id/cameraEnabled"
+        android:translationZ="5dp"
+        android:scaleType="fitCenter" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:id="@+id/faceDetectionEnabled"
+        android:translationZ="5dp"
+        android:scaleType="fitCenter" />
+
+    <ImageView
         android:layout_width="180dp"
         android:layout_height="60dp"
         android:src="@drawable/screen"
@@ -86,30 +104,28 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="2dp" />
+        android:layout_marginTop="1dp" />
 
     <TextView
-        android:text="Serwer: OFF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="17dp"
-        android:layout_marginStart="17dp"
         android:id="@+id/serverStatusTextView"
-        android:layout_alignTop="@+id/screenView"
-        android:layout_alignLeft="@+id/screenView"
-        android:layout_alignStart="@+id/screenView"
-        android:translationZ="5dp"
-        android:textColor="@color/red" />
-
-    <TextView
-        android:text="Haxapod: unknown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/serverStatusTextView"
-        android:layout_alignLeft="@+id/serverStatusTextView"
-        android:layout_alignStart="@+id/serverStatusTextView"
+        android:layout_alignStart="@+id/screenView"
+        android:layout_alignTop="@+id/screenView"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="9dp"
+        android:text="Serwer: OFF"
+        android:textColor="@color/red"
+        android:translationZ="5dp" />
+
+    <TextView
         android:id="@+id/hexapodStatusTextView"
-        android:translationZ="5dp"
-        android:textColor="@color/yellow" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/serverStatusTextView"
+        android:layout_below="@+id/serverStatusTextView"
+        android:text="Haxapod: unknown"
+        android:textColor="@color/yellow"
+        android:translationZ="5dp" />
 
 </RelativeLayout>
